feat: Add maximum local variable size calculation and enhance local variable handling in analysis